--- a/lib/css/style-vis.css
+++ b/lib/css/style-vis.css
@@ -40,7 +40,7 @@
 svg {
   width: 100%;
   height: 1px;
-  border: 1px solid #7fa2ff;
+  border: none;
   font-size: 15px;
   /* font-size: 14px; */
 }
@@ -48,7 +48,7 @@ svg.reselect {
   border: 1px solid #ff3333;
 }
 div.haserror > svg {
-  border: 1px solid red;
+  border: none;
 }
 
 /* "basic" font */
